Working, but no code spltting

--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+body {
+  background-color: #282c34;
+}
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +32,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+a {
+  color: white
 }
