--- a/src/components/DashboardLayout/DashboardLayout.css
+++ b/src/components/DashboardLayout/DashboardLayout.css
@@ -35,7 +35,7 @@
   margin-left: var(--margin-left);
 }
 
-#dashboardLayoutBody {
+#content {
   height: 100vh;
   height: var(--body-height);
   overflow-x: hidden;
