--- a/src/components/MarketingLayout/MarketingLayout.css
+++ b/src/components/MarketingLayout/MarketingLayout.css
@@ -12,6 +12,7 @@
 }
 
 #marketingLayout {
+  background: var(--body);
   overflow: hidden;
   margin-top: var(--header-height);
   margin-bottom: var(--margin-bottom);
