--- a/src/components/LoginLayout/index.module.css
+++ b/src/components/LoginLayout/index.module.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #ccc;
+    background: var(--primary-darker);
     overflow-x: hidden;
     overflow-y: auto;
     padding: 10px;
