--- a/src/components/MarketingLayout/Header/Left/Left.module.css
+++ b/src/components/MarketingLayout/Header/Left/Left.module.css
@@ -1,4 +1,4 @@
-.left {
-    /* display: flex; */
-    /* flex-direction: row; */
-}
+/* .right {
+    display: flex;
+    flex-direction: row;
+} */
