--- a/src/components/MarketingLayout/Header/Left/Logo.module.css
+++ b/src/components/MarketingLayout/Header/Left/Logo.module.css
@@ -12,8 +12,7 @@
     padding-right: 14px;
     color: white;
 }
-.logo img {
-    height: 22px;
-    width: 22px;
+.logo svg {
+    color: hsl(var(--primary-h), var(--primary-s), 70%);
     margin: 0 6px 0 10px;
 }
