--- a/src/components/MarketingLayout/SidebarRight/Nav.module.css
+++ b/src/components/MarketingLayout/SidebarRight/Nav.module.css
@@ -14,6 +14,10 @@
     padding: 0 7px;
     display: inline-block;
 }
+.navlinkIcon svg {
+    position: relative;
+    top: 6px;
+}
 .navlinkText {
     padding: 0 14px;
     display: inline-block;
