--- a/src/components/MarketingLayout/SidebarRight/Nav.module.css
+++ b/src/components/MarketingLayout/SidebarRight/Nav.module.css
@@ -1,26 +1,21 @@
 .nav {
-    border-top: 1px solid var(--nav-background-hover);
     width: var(--sidebar-width-full);
 }
 .navlink {
-    display: block;
-    padding: 14px;
-    color: var(--text)
+    padding: 18px 0 14px 14px;
+    color: var(--text);
+    display: flex;
+    flex-direction: row;
 }
 .navlink:hover {
     background: var(--nav-background-hover);
 }
 .navlinkIcon {
-    padding: 0 7px;
-    display: inline-block;
 }
-.navlinkIcon svg {
-    position: relative;
-    top: 6px;
+.navlinkIcon {
 }
 .navlinkText {
-    padding: 0 14px;
-    display: inline-block;
+    padding: 3px 14px;
 }
 .active, .active:hover {
     background: var(--nav-background-active);
