--- a/src/components/AdminLayout/AdminLayout.css
+++ b/src/components/AdminLayout/AdminLayout.css
@@ -33,6 +33,7 @@
 }
 
 #content {
+  visibility: hidden; /* hide until Route or Stack unhides */
   height: 100vh;
   height: var(--body-height);
   overflow-x: hidden;
