--- a/src/components/BlankLayout/BlankLayout.css
+++ b/src/components/BlankLayout/BlankLayout.css
@@ -8,6 +8,7 @@
 }
 
 #content {
+  visibility: hidden; /* hide until Route or Stack unhides */
   height: 100vh;
   height: var(--body-height);
   overflow-x: hidden;
