--- a/src/layout/theme/theme.css
+++ b/src/layout/theme/theme.css
@@ -46,6 +46,22 @@ body.dark {
   --searchbar-background-active: hsl(0, 0%, 10%);
 }
 
+body {
+  margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 h1,h2,h3,h4,h5,h6,p,li,.text {
   color: var(--text);
 }
