--- a/src/layout/MarketingLayout/SidebarRight/SidebarRight.module.css
+++ b/src/layout/MarketingLayout/SidebarRight/SidebarRight.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: var(--header-height);
     right: 0;
-    width: var(--sidebar-width);
+    width: var(--sidebarRight-width);
     background: var(--nav-background);
     height: var(--body-height);
     overflow-x: hidden;
