--- a/src/layout/AdminLayout/AdminLayout.css
+++ b/src/layout/AdminLayout/AdminLayout.css
@@ -30,7 +30,7 @@
   margin-left: var(--margin-left);
 }
 
-.miniSidebar {
+.miniSidebar .adminLayout {
   --sidebar-width: var(--sidebar-width-mini);
 }
 
