--- a/src/layout/MarketingLayout/SidebarRight/NavLink.module.css
+++ b/src/layout/MarketingLayout/SidebarRight/NavLink.module.css
@@ -9,10 +9,8 @@
 }
 .navlinkIcon {
 }
-.navlinkIcon {
-}
 .navlinkText {
-    padding: 3px 14px;
+    padding: 3px 14px 3px 20px;
 }
 .active, .active:hover {
     background: var(--nav-background-active);
