--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -24,6 +24,9 @@ body {
   --searchbar-background: hsl(0, 0%, 80%);
   --searchbar-background-active: hsl(0, 0%, 90%);
 
+  --body-height: 100vh;
+  
+  overflow: hidden;
   background: var(--nav-background);
 }
 
