--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -10,6 +10,11 @@ body {
     var(--primary-s),
     var(--primary-l)
   );
+  --primary-hover: hsl(
+    var(--primary-h),
+    var(--primary-s),
+    calc( var(--primary-l) + 10% )
+  );
   --primary-darker: hsl(
     var(--primary-h),
     var(--primary-s),
