Theme is now applied at layout-level

--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -15,78 +15,47 @@
   --danger: hsl(var(--danger-h),var(--danger-s),var(--danger-l));
   --danger-hover: hsl(var(--danger-h),var(--danger-s),calc( var(--danger-l) + 10% ));
 
-  --text-default: black;
-  --body-default: hsl(0, 0%, 98%);
-  --gray1-default: hsl(0, 0%, 94%);
-  --gray2-default: hsl(0, 0%, 90%);
-  --gray3-default: hsl(0, 0%, 87%);
-  --gray4-default: hsl(0, 0%, 80%);
-  --links-default: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 20% ));
-  --links-hover-default: var(--primary);
-  --header-background-default: hsl(0, 0%, 0%);
-  --nav-background-default: var(--gray1-default);
-  --nav-background-hover-default: var(--gray3-default);
-  --nav-background-active-default: hsl(var(--primary-h),var(--primary-s),94%);
-  --nav-text-active-default: var(--primary);
-  --searchbar-background-default: var(--gray4-default);
-  --searchbar-background-active-default: var(--gray2-default);
-
-  --text-dark: white;
-  --body-dark: black;
-  --gray1-dark: hsl(0, 0%, 10%);
-  --gray2-dark: hsl(0, 0%, 12%);
-  --gray3-dark: hsl(0, 0%, 20%);
-  --gray4-dark: hsl(0, 0%, 24%);
-  --links-dark: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 47% ));
-  --links-hover-dark: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 40% ));
-  --header-background-dark: hsl(0, 0%, 40%);
-  --nav-background-dark: var(--gray2-dark);
-  --nav-background-hover-dark: var(--gray3-dark);
-  --nav-background-active-dark: var(--primary);
-  --nav-text-active-dark: var(--text-dark);
-  --searchbar-background-dark: var(--gray4-dark);
-  --searchbar-background-active-dark: var(--gray2-dark);
+  --black: black;
+  --white: hsl(0, 0%, 98%);
+  --gray1: hsl(0, 0%, 94%);
+  --gray2: hsl(0, 0%, 90%);
+  --gray3: hsl(0, 0%, 87%);
+  --gray4: hsl(0, 0%, 80%);
+  --links: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 20% ));
+  --links-hover: var(--primary);
+  --header-background: hsl(0, 0%, 0%);
+  --nav-background: var(--gray1);
+  --nav-background-hover: var(--gray3);
+  --nav-background-active: hsl(var(--primary-h),var(--primary-s),94%);
+  --nav-text-active: var(--primary);
+  --searchbar-background: var(--gray4);
+  --searchbar-background-active: var(--gray2);
 }
 
 body {
-  --text: var(--text-default);
-  --body: var(--body-default);
-  --gray1: var(--gray1-default);
-  --gray2: var(--gray2-default);
-  --gray3: var(--gray3-default);
-  --gray4: var(--gray4-default);
-  --header-background: var(--header-background-default);
-  --nav-background: var(--nav-background-default);
-  --nav-background-hover: var(--nav-background-hover-default);
-  --nav-background-active: var(--nav-background-active-default);
-  --nav-text-active: var(--nav-text-active-default);
-  --links: var(--links-default);
-  --links-hover: var(--links-hover-default);
-  --searchbar-background: var(--searchbar-background-default);
-  --searchbar-background-active: var(--searchbar-background-active-default);
-  
-  --body-height: 100vh;
+  --white-height: 100vh;
 
   overflow: hidden;
-  background: var(--body);
+  background: var(--white);
 }
 
-body.dark {
-  --text: var(--text-dark);
-  --body: var(--body-dark);
-  --gray1: var(--gray1-dark);
-  --gray2: var(--gray2-dark);
-  --gray3: var(--gray3-dark);
-  --gray4: var(--gray4-dark);
-  --header-background: var(--header-background-dark);
-  --nav-background: var(--nav-background-dark);
-  --nav-background-hover: var(--nav-background-hover-dark);
-  --nav-background-active: var(--nav-background-active-dark);
-  --nav-text-active: var(--nav-text-active-dark);
-  --links: var(--links-dark);
-  --links-hover: var(--links-hover-dark);
-  --searchbar-background: var(--searchbar-background-dark);
-  --searchbar-background-active: var(--searchbar-background-active-dark);
+.dark {
+  --black: white;
+  --white: black;
+  --gray1: hsl(0, 0%, 10%);
+  --gray2: hsl(0, 0%, 12%);
+  --gray3: hsl(0, 0%, 20%);
+  --gray4: hsl(0, 0%, 24%);
+  --links: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 47% ));
+  --links-hover: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 40% ));
+  --header-background: hsl(0, 0%, 40%);
+  --nav-background: var(--gray2);
+  --nav-background-hover: var(--gray3);
+  --nav-background-active: var(--primary);
+  --nav-text-active: var(--black);
+  --searchbar-background: var(--gray4);
+  --searchbar-background-active: var(--gray2);
+  background: var(--white);
 }
 
 body {
@@ -106,11 +75,11 @@ code {
 }
 
 h1,h2,h3,h4,h5,h6,p,li,.text {
-  color: var(--text);
+  color: var(--black);
 }
 a, a:active {
   text-decoration: none;
-  color: var(--text);
+  color: var(--black);
 }
 
 p a, li a, .body-link {
