--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-h: 270;--primary-s: 100%;--primary-l: 33%;
+  --primary-h: 270;--primary-s: 80%;--primary-l: 33%;
   --primary: hsl(var(--primary-h),var(--primary-s),var(--primary-l));
   --primary-hover: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 10% ));
 
@@ -28,7 +28,7 @@
   --gray9: hsl(0, 0%, 30%);
   --gray10: hsl(0, 0%, 20%);
   --gray11: hsl(0, 0%, 10%);
-  --links: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 20% ));
+  --links: hsl(var(--primary-h),var(--primary-s),calc( var(--primary-l) + 10% ));
   --links-hover: var(--primary);
   --header-background: hsl(0, 0%, 0%);
   --nav-background: var(--gray1);
@@ -72,34 +72,14 @@ body {
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
-h1,h2,h3,h4,h5,h6,p,li,.text {
-  color: var(--black);
-}
-a, a:active, a:focus {
-  text-decoration: none;
-  color: var(--black);
-}
-
-p a, li a, .body-link {
-  text-decoration: underline;
-  color: var(--links);
-}
-p a:hover, li a:hover, .body-link:hover {
-  color: var(--links-hover);
-}
-
 html {
   font-size: 15px;
 }
@@ -122,14 +102,29 @@ h6 {
   font-size: 1.1rem
 }
 
+h1,h2,h3,h4,h5,h6,p,li,.text {
+  color: var(--black);
+}
+a, a:active, a:focus, .body-link {
+  text-decoration: none;
+  color: var(--links);
+}
+a:hover, .body-link:hover {
+  color: var(--links-hover);
+  text-decoration: underline;
+}
+p a, li a, .body-link {
+  text-decoration: underline;
+}
+
 button, a.button {
-  font-weight: bold;
   padding: .2rem .4rem;
-  color: var(--primary);
+  color: var(--gray10);
   border: 1px solid var(--gray4);
   border-radius: 2px;
   cursor: pointer;
   background: var(--gray1);
+  text-decoration: none;
 }
 button:hover, a.button:hover {
   background: var(--gray3);
@@ -140,8 +135,10 @@ button:active, a.button:active {
 button:focus, a.button:focus {
   outline: none;
 }
+button:disabled, button.disabled, a.button.disabled {
+  color: var(--gray6);
+}
 .dark button,.dark a.button {
-  color: var(--links);
   background: var(--gray2);
 }
 .dark button:hover,.dark a.button:hover {
@@ -162,4 +159,52 @@ button.secondary, a.button.secondary {
 }
 button.secondary:hover, a.button.secondary:hover {
   background: var(--secondary-hover);
+}
+
+input, select {
+  border: 1px solid var(--gray4);
+  color: var(--black);
+  box-sizing: border-box;
+  padding-left: .3rem;
+  line-height: 1.3rem;
+  border-radius: 2px;
+  outline: none;
+  margin-right: .2rem;
+  background: var(--white);
+}
+select {
+  color: var(--gray10);
+  padding: .13rem .2rem;
+}
+
+
+table {
+  width: 100%;
+  border: 1px solid var(--gray3);
+  margin-bottom: 12px;
+}
+table, th, td {
+  border-collapse: collapse;
+}
+thead, tfoot {
+  background: var(--gray3);
+}
+thead td, tfoot td {
+  padding: .5rem .2rem;
+}
+tbody tr:nth-child(odd) {
+  background: var(--gray1);
+}
+tbody td {
+  padding: .5rem .2rem .8rem;
+  font-size: .9rem;
+}
+tbody td:nth-of-type(2) {
+  font-weight: bold;
+}
+td.clickable {
+  cursor: pointer
+}
+td.clickable:hover {
+  background: var(--gray4)
 }
