--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -6,6 +6,10 @@
   --secondary-h: 45;--secondary-s: 100%;--secondary-l: 40%;
   --secondary: hsl(var(--secondary-h),var(--secondary-s),var(--secondary-l));
   --secondary-hover: hsl(var(--secondary-h),var(--secondary-s),calc( var(--secondary-l) + 4% ));
+
+  --success-h: 130;--success-s: 50%;--success-l: 40%;
+  --success: hsl(var(--success-h),var(--success-s),var(--success-l));
+  --success-hover: hsl(var(--success-h),var(--success-s),calc( var(--success-l) + 4% ));
   
   --warning-h: 45;--warning-s: 100%;--warning-l: 40%;
   --warning: hsl(var(--warning-h),var(--warning-s),var(--warning-l));
