--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -75,7 +75,6 @@ body {
   background: var(--white);
   margin: 0;
   max-width: 100%;
-  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -85,7 +84,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 html {
-  font-size: 15px;
+  font-size: 16px;
 }
 h1 {
   font-size: 1.6rem
@@ -104,6 +103,9 @@ h5 {
 }
 h6 {
   font-size: 1.1rem
+}
+input, select, select:focus, textarea {
+  font-size: 1rem;
 }
 
 h1,h2,h3,h4,h5,h6,p,li,.text {
@@ -186,9 +188,13 @@ table {
   width: 100%;
   border: 1px solid var(--gray3);
   margin-bottom: 12px;
+  color: var(--black);
 }
 table, th, td {
   border-collapse: collapse;
+}
+td {
+  vertical-align: top;
 }
 thead, tfoot {
   background: var(--gray3);
@@ -202,9 +208,6 @@ tbody tr:nth-child(odd) {
 tbody td {
   padding: .5rem .2rem .8rem;
   font-size: .9rem;
-}
-tbody td:nth-of-type(2) {
-  font-weight: bold;
 }
 td.clickable {
   cursor: pointer
