--- a/src/layout/theme.css
+++ b/src/layout/theme.css
@@ -66,7 +66,6 @@
   --nav-text-active: var(--black);
   --searchbar-background: var(--gray4);
   --searchbar-background-active: var(--gray2);
-  background: var(--white);
 }
 
 * {
@@ -77,7 +76,7 @@ body {
   --body-height: var(--vh);
   --button-height: 30px;
   overflow: hidden;
-  background: var(--white);
+  background: var(--gray5);
   margin: 0;
   max-width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -136,6 +135,12 @@ button, a.button {
   font-size: .8rem;
   height: var(--button-height);
   line-height: 1.4rem;
+  text-align: center;
+}
+@media (max-width: 600px) {
+  button, a.button {
+    min-width: 40px;
+  }
 }
 button:hover, a.button:hover {
   background: var(--gray3);
@@ -193,13 +198,13 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%238C98F2'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
-  background-size: 12px;
-  background-position: calc(100% - 5px) .65rem;
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23666'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+  background-size: 11px;
+  background-position: calc(100% - 5px) .68rem;
   background-repeat: no-repeat;
   cursor: pointer;
   color: var(--gray10);
-  padding: .1rem 24px .12rem .4rem;
+  padding: .1rem 24px .12rem .5rem;
   font-size: .9rem !important;
 }
 @media (max-width: 600px) {
